Fix album item overflow issue

--- a/src/assets/primevue-override.scss
+++ b/src/assets/primevue-override.scss
@@ -16,3 +16,11 @@
     }
   }
 }
+
+.file-preview,.album-list-item {
+  .p-tag {
+    padding: 0.1rem 0.3rem;
+    font-weight: 500;
+    font-size: 0.8rem;
+  }
+}
